convert2Uri